--- a/src/components/ProductDetails/ProductDetails.css
+++ b/src/components/ProductDetails/ProductDetails.css
@@ -1,15 +1,14 @@
 .btn{
     padding: 5px;
     width: 150px;
-    background-color: var(--mainColor);
-    border: 1px solid white;
-    color: white;
+    /* background-color: var(--mainColor); */
+    border: 1px solid var(--mainColor);
+    color: var(--mainColor);
     border-radius: 5px;
     transition: all 0.3s;
 
 }
 .btn:hover{
-    background-color: white;
-    color: var(--mainColor);
-    border: 1px solid var(--mainColor);
+    background-color: var(--mainColor);
+    color: white;
 }
