--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -7,7 +7,8 @@
     height: auto;
     box-sizing: border-box;
     cursor: pointer;
-    background-color: var(--mainColor);
+    /* background-color: var(--mainColor); */
+    border: 2px solid var(--mainColor);;
     border-radius: 10px;
     transition: box-shadow 0.3s;
 
